# pico-zero-blink

./: CMakeLists.txt  README.md  main.c  makefile
